fix flex wrap

--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -1,10 +1,9 @@
 
 .Container {
-    height: 100%;
     width: 80%;
     display: flex;
     justify-content: space-between;;
     margin: 0 auto;
-    align-items: center;
+    flex-wrap: wrap;
 
 }
