--- a/src/main/skills/Skills.module.css
+++ b/src/main/skills/Skills.module.css
@@ -12,3 +12,6 @@
     height: 100px;
 }
 
+.Title {
+text-decoration: underline;
+}
