--- a/src/main/skills/skillsBlockConstructor/SkillBlockConstructor.module.css
+++ b/src/main/skills/skillsBlockConstructor/SkillBlockConstructor.module.css
@@ -1,10 +1,9 @@
 .SkillsBlock {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    width: 300px;
-    height: 100%;
+    justify-content: flex-start;
+    width: 250px;
     background-color: aliceblue;
     
 }
